--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
               <li><p class="navbar-text">Hi, <%= current_user.email %></p></li>
               <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
               <li><%= link_to('Edit Profile', edit_user_registration_path) %></li>
+              <li><p class="pull-right">你的 API Token：<code><%= current_user.authentication_token  %></code></p></li>
               <% else %>
               <li><%= link_to('Sign up', new_user_registration_path) %></li>
               <li><%= link_to('Log in', new_user_session_path) %></li>
